--- a/manifests/nginx-ingress-subchart.yaml
+++ b/manifests/nginx-ingress-subchart.yaml
@@ -10,7 +10,7 @@ spec:
   project: default
   source:
     path: charts/nginx-plus-ingress
-    repoURL: https://github.com/<GITHUB_USER>/modern_app_jumpstart_workshop_infra.git
+    repoURL: https://github.com/yossi-r/modern_app_jumpstart_workshop_infra.git
     targetRevision: HEAD
   destination:
     namespace: nginx-ingress
